tests/miniJava/neg/001266_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new if int [ 0 ] ; } }
